# nn-mnist

api/: .gitignore  default.ipynb  main.py  model.pkl  model_100.pkl  neural_net.py  playground.ipynb  pyproject.toml  requirements.txt  train.py  trained_model.pkl
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/results/: page.tsx
frontend/components/: confusion.tsx  prediction-item.tsx  types.ts
frontend/lib/: options.ts
